--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ nav{
 
     text-align: center;
 
-    background-image: url(..//RESOURCES/main-content-1-BG.png);
+    background-image: url(./RESOURCES/main-content-1-BG.png);
     background-size: cover;
     background-position: center;
 }
