--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ h1{
     height: 500px;
 
     border-radius: 20px;
-    background-image: url(./RESOURCES/Examples/section-2-bg.png);
+    background-image: url(./RESOURCES/section-2-bg.png);
     background-size: cover;
     
 }
