--- a/styles.css
+++ b/styles.css
@@ -24,9 +24,9 @@ nav{
     float: right;
 
     vertical-align: middle;
-
+    padding-top: 5px;
     width: 475px;
-    height: 30px;
+    height: 40px;
 }
 
 .nav-li{
