--- a/styles.css
+++ b/styles.css
@@ -160,10 +160,10 @@ h1{
 
 /*CONTENT 3*/
 .content-3{
-    margin: 0 auto;
 
     height: 700px;
     padding-top: 25px;
+    padding-left:6.6%;
 
     border-radius: 20px;
 
