--- a/styles.css
+++ b/styles.css
@@ -132,7 +132,7 @@ h1{
 .content-2{
     
     padding-top: 55px;
-    padding-left: 150px;
+    padding-left: 15.6%;
     height: 500px;
 
     border-radius: 20px;
