--- a/styles.css
+++ b/styles.css
@@ -140,14 +140,16 @@ h1{
     background-size: cover;
     
 }
+.content-2-container{
+    margin:0 auto;
 
+    width:1140px;
+}
 .content-2-img-1, .content-2-img-2{
     display: inline-block;
 
     width: 550px;
     height: 380px;
-
-    margin-right: 40px;
 
     color: white;
 
@@ -155,6 +157,12 @@ h1{
     border-radius: 20px;
 
     box-shadow: 10px 10px 10px rgb(218, 218, 218);
+}
+.content-2-img-1{
+    float:left;
+}
+.content-2-img-1{
+    float:right;
 }
 
 
