--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ h1{
     margin:0 auto;
 
     width:1140px;
+    height:380px;
 }
 .content-2-img-1, .content-2-img-2{
     display: inline-block;
