--- a/styles.css
+++ b/styles.css
@@ -167,20 +167,20 @@ h1{
 
 
 /*CONTENT 3*/
-.content-3{
-
-    height: 700px;
+.content-3{ 
     padding-top: 25px;
-    padding-left:6.6%;
+    
+    height: 700px;
 
     border-radius: 20px;
 
     background-color: rgb(0, 0, 0);
 }
 .content-3-ul{
-
-    margin-left: 120px;
+    margin: 0 auto;
+    
     padding-left: 26px;
+    
     padding-top: 10px;
 
     width: 1200px;
