--- a/CSS/styles-update.css
+++ b/CSS/styles-update.css
@@ -48,22 +48,16 @@ h1{
 /*CONTENT 2*/
 .content-2{
     padding: 10px 10px 10px 10px;
-    height: 800px;
-
+    height: 100%;
     border-radius: 20px;
     background-image: url(../RESOURCES/section-2-bg.png);
     background-size: cover;
-    
 }
 .content-2-bar-ul{
     display: block;
-
     margin-bottom: 5px;
-
-    width: 1415px;
+    /* width: 100%; */
     height: 30px;
-
-    
 }
 .content-2-bar-li-1{
     display: inline-block;
@@ -124,27 +118,20 @@ h1{
 .content-2-active-project{
     display: inline-block;
     vertical-align:bottom;
-
-    width: 1220px;
-    min-width: 1200px;
-    height: 700px;
-
-    padding: 10px 20px 20px 20px;
-
-    
+    width: 87%;
+    /* min-width: 1200px; */
+    height: 100%;
+    padding: 10px 10px 10px 10px;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.135);
     border-radius: 20px;
-
     backdrop-filter:blur(2px);
 }
 .content-2-acitve-project-info-ul{
     display: inline-block;
-    margin-right: 570px;
+    margin-right: 55%;
     vertical-align: top;
-
-    width: 400px;
+    width: 26%;
     height: 120px;
-    
 }
 
 .content-2-active-project-info-li-1, .content-2-active-project-info-li-2, .content-2-active-project-info-li-3 {
@@ -192,22 +179,16 @@ h1{
 }
 .content-2-active-project-soft-ul{
     display: inline-block;
-
     margin: 0px 0px 40px 0px;
     padding: 14px 0px 0px 0px;
-
-    width: 200px;
-
+    width: 18%;
     text-align: right;
-    
 }
 .content-2-active-project-statistic-ul{
     display: inline-block;
-
     margin-bottom: 150px;
     vertical-align: top;
-
-    width: 200px;
+    width: 20%;
 }
 
 .contetnt-2-active-project-statistic-li{
@@ -218,314 +199,25 @@ h1{
 }
 
 .content-2-active-project-soft-li{
+    /* width: 100%; */
     display: inline-block;
-
     margin-bottom: 10px;
     padding: 0px 5px 0px 5px;
-
     height: 30px;
-
     line-height: 30px;
     font-size: 17px;
-
     color: rgb(68, 68, 68);
-    
     border: 1px solid rgba(0, 0, 0, 0.140);
     border-radius: 8px;
 }
 .content-2-active-p{
-    margin: 0px 0px 30px 0px;
+    display: block;
+    /* border: 1px solid red; */
+    /* margin: 0px 0px 0px 0px; */
     padding: 0px 10px 0px 0px;
-
-    width: 600px;
-    
+    width: 704px;
+    /* min-width: 50%; */
     font-size: 20px;
     line-height: 30px;
-    
-    border-radius: 8px;
-    backdrop-filter:blur(2px);
-}
-.content-2-active-bar-load-start{
-    display: inline;
-
-    margin:0px 1094px 0px 0px;
-}
-.content-2-active-bar-load-end{
-    display: inline;
-}
-.content-2-active-load-bar-bg{
-    margin: 10px 0px 0px 0px;
-
-    width: 100%;
-    height: 5px;
-
-    background-color: rgb(194, 194, 194);
-    border-radius: 5px;
-}
-.content-2-active-load-bar{
-    width: 10%;
-    height: 5px;
-
-    background-color: brown;
-    border-radius: 5px;
-}
-.content-2-list-ul{
-    display: inline-block;
-
-    padding: 20px;
-
-    width: 190px;
-    height: 700px;
-
-    text-align: center;
-
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.135);
-    border-radius: 20px;
-
-    backdrop-filter:blur(2px);
-}
-.content-2-list-li{
-
-    margin-bottom: 10px;
-
-    height: 35px;
-    width: 150px;
-}
-.content-2-list-li-btn{
-    display: block;
-
-    height: 35px;
-    width: 150px;
-
-    line-height: 35px;
-
-    border: 1px solid rgba(0, 0, 0, 0.140);
-    border-radius: 8px;
-
-    background-color:rgba(240, 248, 255, 0.063);
-    backdrop-filter:blur(2px);
-
-    font-family: 'Raleway';
-    font-size: 17px;
-    font-weight: 400;
-}
-.content-2-list-li-btn:hover{
-    color: white;
-    background-color: brown;
-    box-shadow: 0px 0px 20px rgba(87, 11, 11, 0.376);
-}
-.content-2-list-li-btn-active{
-    display: block;
-
-    height: 35px;
-    width: 150px;
-
-    line-height: 35px;
-
-    border: 1px solid rgba(0, 0, 0, 0.140);
-    border-radius: 8px;
-
-    font-family: 'Raleway';
-    font-size: 17px;
-    font-weight: 400;
-
-    color: white;
-    background-color: brown;
-    box-shadow: 0px 0px 20px rgba(87, 11, 11, 0.376);
-}
-
-
-
-/*CONTENT 3*/
-.content-3{
-    margin: 0 auto;
-
-    padding: 0px 20px 20px 20px;
-
-    
-
-    border-radius: 20px;
-
-    background-color: rgb(0, 0, 0);
-}
-.content-3-image-check{
-    margin: 0px 0px 30px 0px;
-    width: 100px;
-}
-h3{ 
-    margin-bottom:20px;
-    margin-left: 20px;
-    width: 300px;
-    height: 30px;
-    line-height: 30px;
-    
-    color: white;
-
-    font-family: 'Raleway';
-    font-size: 20px;
-    font-weight: 300;
-
-}
-.content-3-upadate-list-helper-ul{
-    width: 1400px;
-    margin: 0px 0px 10px 0px;
-}
-
-
-.content-3-upadte-helper-li-1, .content-3-upadte-helper-li-2, .content-3-upadte-helper-li-3, .content-3-upadte-helper-li-4 {
-    display:inline-block;
-
-    height: 20px;
-    line-height: 20px;
-
-    text-align: center;
-    font-size: 12px;
-
-    color: rgb(145, 145, 145);
-}
-.content-3-upadte-helper-li-1{
-    margin-right: 30px;
-    width: 220px;
-}
-.content-3-upadte-helper-li-2{
-    margin-right: 1px;
-    width: 130px;
-}
-.content-3-upadte-helper-li-3{
-    width: 915px;
-}
-.content-3-upadte-helper-li-4{
-    width: 70px;
-}
-
-
-.content-3-update-list-ul{
-    width: 1400px;
-}
-.content-3-update-list-li{
-    display: inline-block;
-    margin: 0px 0px 5px 0px;
-}
-.content-3-update-list-li-a{
-    color: greenyellow;
-}
-
-
-.content-3-update-list-li-section-1{
-    display: inline-block;
-
-    vertical-align: top;
-
-    margin: 0px 15px 0px 0px;
-    padding: 10px 10px 10px 20px;
-
-    width: 220px;
-    height: 100px;
-
-    border-top: 1px solid #434343;
-    border-bottom: 1px solid #434343;
-    border-left: 1px solid #434343;
-
-    border-radius: 20px;
-}
-
-.content-3-update-list-li-section-2{
-    display: inline-block;
-
-    padding: 15px;
-
-    vertical-align: top;
-    
-    width: 1160px;
-    height: 100px;
-    
-    border-top: 1px solid #434343;
-    border-right: 1px solid #434343;
-    border-bottom: 1px solid #434343;
-
-    border-radius: 20px;
-}
-
-.contetnt-3-upadte-list-li-section-1-info{
-    
-    margin-bottom: 10px;
-
-    font-size: 12px;
-    color: white;
-
-}
-.content-3-update-list-li-section-2-article{
-    display: inline-block;
-
-    vertical-align: top;
-
-    width: 130px;
-
-    line-height: 70px;
-    height: 70px;
-
-    text-align: center;
-
-    color: white;
-
-    border-top: 1px solid greenyellow;
-    border-left: 1px solid greenyellow;
-    border-bottom: 1px solid greenyellow;
-
-    border-radius: 17px;
-}
-
-
-.content-3-update-list-li-section-2-info{
-    display: inline-block;
-
-    width: 918px;
-    padding: 27px 15px 0px 15px;
-
-    height: 70px;
-    
-    text-align: left;
-
-    color: white;
-
-    font-size: 15px;
-    font-weight: 200;
-
-    border-top: 1px solid #434343;
-    border-bottom: 1px solid #434343;
-    border-radius: 17px;
-}
-
-
-.content-3-update-list-li-section-2-button{
-    display: inline-block;
-
-    vertical-align: top;
-
-    width: 70px;
-    height: 70px;
-    
-    color: white;
-
-    font-family: 'Raleway';
-    font-size: 15px;
-    font-weight: 100;
-
-    border: none;
-
-    background-color: black;
-
-    border-top: 1px solid greenyellow;
-    border-right: 1px solid greenyellow;
-    border-bottom: 1px solid greenyellow;
-    
-    border-radius: 17px;
-}
-.content-3-update-list-li-section-2-button:hover{
-    
-    
-    border-top: 1px solid brown;
-    border-right: 1px solid  brown;
-    border-bottom: 1px solid  brown;
-    
-}
+    height: 192px;
+    /* border-radius: 8px; */
