--- a/CSS/styles-update.css
+++ b/CSS/styles-update.css
@@ -221,3 +221,251 @@ h1{
     line-height: 30px;
     height: 192px;
     /* border-radius: 8px; */
+    backdrop-filter:blur(2px);
+}
+.content-2-active-bar-load-start{
+    display: inline-block;
+    /* width: 96%; */
+    float: left;
+}
+.content-2-active-bar-load-end{
+    display: inline-block;
+    text-align: left;
+    /* width: 3%; */
+    /* border: 1px solid red; */
+    float: right;
+}
+.content-2-active-load-bar-bg{
+    margin: 10px 0px 0px 0px;
+
+    width: 100%;
+    height: 5px;
+
+    background-color: rgb(194, 194, 194);
+    border-radius: 5px;
+}
+.content-2-active-load-bar{
+    width: 10%;
+    height: 5px;
+
+    background-color: brown;
+    border-radius: 5px;
+}
+.content-2-list-ul{
+    display: inline-block;
+    padding: 20px;
+    vertical-align: top;
+    width: 11.7%;
+    height: 100%;
+    text-align: center;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.135);
+    border-radius: 20px;
+    backdrop-filter:blur(2px);
+}
+.content-2-list-li{margin-bottom: 10px;height: 35px;width: 100%;}
+.content-2-list-li-btn{
+    display: block;
+    height: 35px;
+    width: 100%;
+    line-height: 35px;
+    border: 1px solid rgba(0, 0, 0, 0.140);
+    border-radius: 8px;
+    background-color:rgba(240, 248, 255, 0.063);
+    backdrop-filter:blur(2px);
+    font-family: 'Raleway';
+    font-size: 90%;
+    font-weight: 400;
+}
+.content-2-list-li-btn:hover{
+    color: white;
+    background-color: brown;
+    box-shadow: 0px 0px 20px rgba(87, 11, 11, 0.376);
+}
+.content-2-list-li-btn-active{
+    display: block;
+    height: 35px;
+    width: 100%;
+    line-height: 35px;
+    border: 1px solid rgba(0, 0, 0, 0.140);
+    border-radius: 8px;
+    font-family: 'Raleway';
+    font-size: 17px;
+    font-weight: 400;
+    color: white;
+    background-color: brown;
+    box-shadow: 0px 0px 20px rgba(87, 11, 11, 0.376);
+}
+
+
+
+/*CONTENT 3*/
+.content-3{
+    margin: 0 auto;
+
+    padding: 0px 20px 20px 20px;
+
+    
+
+    border-radius: 20px;
+
+    background-color: rgb(0, 0, 0);
+}
+.content-3-image-check{
+    margin: 0px 0px 30px 0px;
+    width: 100px;
+}
+h3{ 
+    margin-bottom:20px;
+    margin-left: 20px;
+    width: 300px;
+    height: 30px;
+    line-height: 30px;
+    
+    color: white;
+
+    font-family: 'Raleway';
+    font-size: 20px;
+    font-weight: 300;
+
+}
+.content-3-upadate-list-helper-ul{
+    width: 100%;
+    margin: 0px 0px 10px 0px;
+}
+
+
+.content-3-upadte-helper-li-1, .content-3-upadte-helper-li-2, .content-3-upadte-helper-li-3, .content-3-upadte-helper-li-4 {
+    display:inline-block;
+
+    height: 20px;
+    line-height: 20px;
+
+    text-align: center;
+    font-size: 12px;
+
+    color: rgb(145, 145, 145);
+}
+.content-3-upadte-helper-li-1{
+    /* margin-right: 2%; */
+    width: 20%;
+    /* border: 1px solid; */
+}
+.content-3-upadte-helper-li-2{
+    /* margin-right: 1px; */
+    width: 14%;
+    /* border: 1px solid; */
+}
+.content-3-upadte-helper-li-3{
+    /* margin-right: 3%; */
+    width: 49%;
+    /* border: 1px solid; */
+}
+.content-3-upadte-helper-li-4{
+    width: 15.9%;
+    padding-left: 1.5%;
+    /* border: 1px solid red; */
+}
+
+
+.content-3-update-list-ul{
+    /* width: 100%; */
+}
+.content-3-update-list-li{
+    display: inline-block;
+    margin: 0px 0px 5px 0px;
+    width: 100%;
+}
+.content-3-update-list-li-a{
+    color: greenyellow;
+}
+
+
+.content-3-update-list-li-section-1{
+    display: inline-block;
+    vertical-align: top;
+    margin: 0px 5px 0px 0px;
+    padding: 10px 10px 10px 10px;
+    width: 20%;
+    height: 100px;
+    border-top: 1px solid #434343;
+    border-bottom: 1px solid #434343;
+    border-left: 1px solid #434343;
+    border-radius: 20px;
+}
+
+.content-3-update-list-li-section-2{
+    display: inline-block;
+    padding: 15px;
+    vertical-align: top;
+    width: 79%;
+    height: 100px;
+    border-top: 1px solid #434343;
+    border-right: 1px solid #434343;
+    border-bottom: 1px solid #434343;
+    border-radius: 20px;
+    box-sizing: border-box;
+}
+
+.contetnt-3-upadte-list-li-section-1-info{
+    
+    margin-bottom: 10px;
+
+    font-size: 12px;
+    color: white;
+
+}
+.content-3-update-list-li-section-2-article{
+    display: inline-block;
+    vertical-align: top;
+    width: 14%;
+    line-height: 70px;
+    height: 70px;
+    text-align: center;
+    color: white;
+    border-top: 1px solid greenyellow;
+    border-left: 1px solid greenyellow;
+    border-bottom: 1px solid greenyellow;
+    border-radius: 17px;
+}
+
+
+.content-3-update-list-li-section-2-info{
+    display: inline-block;
+    width: 71%;
+    padding: 0px 0px 0px 15px;
+    height: 70px;
+    line-height: 250%;
+    text-align: left;
+    color: white;
+    font-size: 14px;
+    font-weight: 200;
+    border-top: 1px solid #434343;
+    border-bottom: 1px solid #434343;
+    border-radius: 17px;
+}
+
+
+.content-3-update-list-li-section-2-button{
+    display: inline-block;
+    vertical-align: top;
+    width: 14%;
+    height: 70px;
+    color: white;
+    font-family: 'Raleway';
+    font-size: 15px;
+    font-weight: 100;
+    border: none;
+    background-color: black;
+    border-top: 1px solid greenyellow;
+    border-right: 1px solid greenyellow;
+    border-bottom: 1px solid greenyellow;
+    border-radius: 17px;
+}
+.content-3-update-list-li-section-2-button:hover{
+    
+    
+    border-top: 1px solid brown;
+    border-right: 1px solid  brown;
+    border-bottom: 1px solid  brown;
+    
+}
