--- a/CSS/styles-update.css
+++ b/CSS/styles-update.css
@@ -223,6 +223,10 @@ h1{
     /* border-radius: 8px; */
     backdrop-filter:blur(2px);
 }
+.content-2-active-bar-container{
+    width:100%;
+    height:16px;
+}
 .content-2-active-bar-load-start{
     display: inline-block;
     /* width: 96%; */
@@ -262,7 +266,10 @@ h1{
     border-radius: 20px;
     backdrop-filter:blur(2px);
 }
-.content-2-list-li{margin-bottom: 10px;height: 35px;width: 100%;}
+.content-2-list-li{
+    margin-bottom: 10px;
+    height: 35px;
+    width: 100%;}
 .content-2-list-li-btn{
     display: block;
     height: 35px;
