--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -55,8 +55,12 @@ h1{
     background-color: #ededed;
     
 }
-.content-2-container{
+.content-2-portfolio-container{
     
+    
+    
+}
+.content-2-portfolio-ul{
     
 }
 .content-2-portfolio-li{
@@ -64,7 +68,7 @@ h1{
     display: inline-block;
     vertical-align: top;
 
-    margin: 20px 0px 0px 20px;
+    margin: 20px 20px 20px 0px;
 
     width: 437px;
     height: 670px;
