--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -57,8 +57,7 @@ h1{
 }
 .content-2-portfolio-container{
     margin:0 auto;
-    
-    width:90%;
+
     height:100%;   
 }
 .content-2-portfolio-ul{
@@ -70,10 +69,10 @@ h1{
     display: inline-block;
     vertical-align: top;
 
-    width:33.3%;
-    height: 670px;
-
+    width:33.1%;
+    
     border-radius: 20px;
+    border:10px solid #ededed;
 
     box-shadow: 0px 0px 10px rgb(167, 167, 167);
 
