--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -58,21 +58,22 @@ h1{
 .content-2-portfolio-container{
     margin:0 auto;
 
+    width:90%;
     height:100%;   
+    
 }
 .content-2-portfolio-ul{
-
-    
+    width:100%;
 }
 .content-2-portfolio-li{
 
     display: inline-block;
     vertical-align: top;
 
-    width:33.1%;
+    width:30%;
+    margin:1.5%;
     
     border-radius: 20px;
-    border:10px solid #ededed;
 
     box-shadow: 0px 0px 10px rgb(167, 167, 167);
 
@@ -107,9 +108,9 @@ h1{
 .content-2-li-portfolio-p{
     display: inline-block;
 
-    margin-right: 60px;
+    margin-right: 19%;
 
-    width: 290px;
+    width: 60%;
     height: 30px;
 
     padding-left: 10px;
@@ -119,7 +120,7 @@ h1{
 .content-2-li-portfolio-p-status-active, .content-2-li-portfolio-p-status-done{
     display: inline-block;
 
-    width: 70px;
+    width: 18%;
     height: 30px;
 
     text-align: center;
@@ -127,10 +128,8 @@ h1{
 
     font-size: 15px;
     color: #ededed;
-    
-    
 
-    border-radius: 10px;
+    border-radius: 15px;
     background-color: brown;
 }
 .content-2-li-portfolio-p-status-done{
