--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -131,6 +131,8 @@ h1{
 
     border-radius: 15px;
     background-color: brown;
+
+    text-decoration:none;
 }
 .content-2-li-portfolio-p-status-done{
     
