--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -88,6 +88,7 @@ h1{
 
 .content-2-portfolio-li-href{
     color: black;
+    text-decoration:none;
 }
 .content-2-portfolio-li-href:hover{
     color: black;
