--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -147,8 +147,6 @@ h1{
 
     padding: 0px 20px 20px 20px;
 
-    
-
     border-radius: 20px;
 
     background-color: rgb(0, 0, 0);
@@ -172,7 +170,7 @@ h3{
 
 }
 .content-3-upadate-list-helper-ul{
-    width: 1400px;
+    width: 100%;
     margin: 0px 0px 10px 0px;
 }
 
@@ -189,27 +187,34 @@ h3{
     color: rgb(145, 145, 145);
 }
 .content-3-upadte-helper-li-1{
-    margin-right: 30px;
-    width: 220px;
+    /* margin-right: 2%; */
+    width: 20%;
+    /* border: 1px solid; */
 }
 .content-3-upadte-helper-li-2{
-    margin-right: 1px;
-    width: 130px;
+    /* margin-right: 1px; */
+    width: 14%;
+    /* border: 1px solid; */
 }
 .content-3-upadte-helper-li-3{
-    width: 915px;
+    /* margin-right: 3%; */
+    width: 49%;
+    /* border: 1px solid; */
 }
 .content-3-upadte-helper-li-4{
-    width: 70px;
+    width: 15.9%;
+    padding-left: 1.5%;
+    /* border: 1px solid red; */
 }
 
 
 .content-3-update-list-ul{
-    width: 1400px;
+    /* width: 100%; */
 }
 .content-3-update-list-li{
     display: inline-block;
     margin: 0px 0px 5px 0px;
+    width: 100%;
 }
 .content-3-update-list-li-a{
     color: greenyellow;
@@ -218,37 +223,28 @@ h3{
 
 .content-3-update-list-li-section-1{
     display: inline-block;
-
     vertical-align: top;
-
-    margin: 0px 15px 0px 0px;
-    padding: 10px 10px 10px 20px;
-
-    width: 220px;
+    margin: 0px 5px 0px 0px;
+    padding: 10px 10px 10px 10px;
+    width: 20%;
     height: 100px;
-
     border-top: 1px solid #434343;
     border-bottom: 1px solid #434343;
     border-left: 1px solid #434343;
-
     border-radius: 20px;
 }
 
 .content-3-update-list-li-section-2{
     display: inline-block;
-
     padding: 15px;
-
     vertical-align: top;
-    
-    width: 1160px;
+    width: 79%;
     height: 100px;
-    
     border-top: 1px solid #434343;
     border-right: 1px solid #434343;
     border-bottom: 1px solid #434343;
-
     border-radius: 20px;
+    box-sizing: border-box;
 }
 
 .contetnt-3-upadte-list-li-section-1-info{
@@ -261,41 +257,29 @@ h3{
 }
 .content-3-update-list-li-section-2-article{
     display: inline-block;
-
     vertical-align: top;
-
-    width: 130px;
-
+    width: 14%;
     line-height: 70px;
     height: 70px;
-
     text-align: center;
-
     color: white;
-
     border-top: 1px solid greenyellow;
     border-left: 1px solid greenyellow;
     border-bottom: 1px solid greenyellow;
-
     border-radius: 17px;
 }
 
 
 .content-3-update-list-li-section-2-info{
     display: inline-block;
-
-    width: 918px;
-    padding: 27px 15px 0px 15px;
-
+    width: 71%;
+    padding: 0px 0px 0px 15px;
     height: 70px;
-    
+    line-height: 250%;
     text-align: left;
-
     color: white;
-
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 200;
-
     border-top: 1px solid #434343;
     border-bottom: 1px solid #434343;
     border-radius: 17px;
@@ -304,29 +288,22 @@ h3{
 
 .content-3-update-list-li-section-2-button{
     display: inline-block;
-
     vertical-align: top;
-
-    width: 70px;
+    width: 14%;
     height: 70px;
-    
     color: white;
-
     font-family: 'Raleway';
     font-size: 15px;
     font-weight: 100;
-
     border: none;
-
     background-color: black;
-
     border-top: 1px solid greenyellow;
     border-right: 1px solid greenyellow;
     border-bottom: 1px solid greenyellow;
-    
     border-radius: 17px;
 }
 .content-3-update-list-li-section-2-button:hover{
+    
     
     border-top: 1px solid brown;
     border-right: 1px solid  brown;
