--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -62,6 +62,12 @@ h1{
     height:100%;   
     
 }
+.content-2-portfolio-filter{
+    width:100%;
+    height:150px;
+    border:1px solid red;
+    
+}
 .content-2-portfolio-ul{
     width:100%;
 }
