--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -55,17 +55,17 @@ h1{
     background-color: #ededed;
     
 }
+.content-2-portfolio-filter{
+    width:100%;
+    height:60px;
+    
+    bacground-color:#1f1d1d;
+}
 .content-2-portfolio-container{
     margin:0 auto;
 
     width:90%;
     height:100%;   
-    
-}
-.content-2-portfolio-filter{
-    width:100%;
-    height:150px;
-    border:1px solid red;
     
 }
 .content-2-portfolio-ul{
