--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -59,7 +59,7 @@ h1{
     width:100%;
     height:60px;
     
-    bacground-color:#1f1d1d;
+    background-color:#1f1d1d;
 }
 .content-2-portfolio-container{
     margin:0 auto;
