--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -55,7 +55,7 @@ h1{
     background-color: #ededed;
     
 }
-.content-2-portfolio-filter-li-search, .content-2-portfolio-filter-li-active, .content-2-portfolio-filter-li-done, .content-2-portfolio-filter-li-dev,{
+.content-2-portfolio-filter-ul{
     padding: 0px 30px 0px 30px;
     
     width:100%;
@@ -63,7 +63,7 @@ h1{
     
     background-color:#1f1d1d;
 }
-.content-2-portfolio-filter-li{
+.content-2-portfolio-filter-li-search, .content-2-portfolio-filter-li-active, .content-2-portfolio-filter-li-done, .content-2-portfolio-filter-li-dev{
     display:inline-block;
 
     height:60px;
