--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -56,7 +56,7 @@ h1{
     
 }
 .content-2-portfolio-filter-ul{
-    padding: 0px 30px 0px 30px;
+    padding: 10px 30px 10px 30px;
     
     width:100%;
     height:60px;
@@ -66,22 +66,27 @@ h1{
 .content-2-portfolio-filter-li{
     display:inline-block;
 
-    height:60px;
+    height:40px;
 }
 .content-2-portfolio-filter-li-btn-search{
     color:white;
 
-    height:60px;
-    line-height:60px;
+    height:40px;
+    line-height:40px;
 }
 .content-2-portfolio-filter-li-btn-active, .content-2-portfolio-filter-li-btn-done, .content-2-portfolio-filter-li-btn-dev{
     color:white;
 
-    height:60px;
-    line-heght:60px;
+    height:40px;
+    line-heght:40px;
 
     background-color:brown;
+
+    border:none;
+    
 }
+
+
 .content-2-portfolio-container{
     margin:0 auto;
 
