--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -78,7 +78,7 @@ h1{
     vertical-align:top;
     
     height:40px;
-    line-heght:40px;
+    line-height:40px;
 
     background-color:brown;
     color:white;
