--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -69,6 +69,7 @@ h1{
     height:40px;
 }
 .content-2-portfolio-filter-li-btn-search{
+    margin:0px 10px 0px 0px;
     color:black;
 
     height:40px;
