--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -86,6 +86,9 @@ h1{
     border:none;
 
     border-radius:8px;
+
+    font-family:"Raleway";
+    font-weight:600;
 }
 .content-2-portfolio-filter-li-btn-search:hover{
     color:white;
@@ -102,6 +105,9 @@ h1{
     border:none;
 
     border-radius:8px;
+
+    font-family:"Raleway";
+    font-weight:600;
 }
 
 
