--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -59,29 +59,32 @@ h1{
     padding: 10px 30px 10px 30px;
     
     width:100%;
-    height:60px;
+    height:40px;
     
     background-color:#1f1d1d;
 }
 .content-2-portfolio-filter-li{
     display:inline-block;
 
-    height:40px;
+    height:20px;
 }
 .content-2-portfolio-filter-search{
     margin:0px 6px 0px 0px;
-    height:40px;
+    height:20px;
+    line-height:20px;
 
     border:none;
+    border-radius:8px;
 
     font-family:"Raleway";
+    
 }
 .content-2-portfolio-filter-li-btn-search{
     margin:0px 10px 0px 0px;
     color:black;
 
-    height:40px;
-    line-height:40px;
+    height:20px;
+    line-height:20px;
 
     border:none;
 
@@ -97,8 +100,8 @@ h1{
 .content-2-portfolio-filter-li-btn-active, .content-2-portfolio-filter-li-btn-done, .content-2-portfolio-filter-li-btn-dev{   
     margin:0px 6px 0px 0px;
     
-    height:40px;
-    line-height:40px;
+    height:20px;
+    line-height:20px;
 
     background-color:brown;
     color:white;
