--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -59,19 +59,21 @@ h1{
     padding: 10px 30px 10px 30px;
     
     width:100%;
-    height:40px;
+    height:50px;
     
     background-color:#1f1d1d;
 }
 .content-2-portfolio-filter-li{
     display:inline-block;
 
-    height:20px;
+    height:30px;
 }
 .content-2-portfolio-filter-search{
     margin:0px 6px 0px 0px;
-    height:20px;
-    line-height:20px;
+
+    width:100px;
+    height:30px;
+    line-height:30px;
 
     border:none;
     border-radius:8px;
@@ -83,8 +85,8 @@ h1{
     margin:0px 10px 0px 0px;
     color:black;
 
-    height:20px;
-    line-height:20px;
+    height:30px;
+    line-height:30px;
 
     border:none;
 
@@ -100,8 +102,8 @@ h1{
 .content-2-portfolio-filter-li-btn-active, .content-2-portfolio-filter-li-btn-done, .content-2-portfolio-filter-li-btn-dev{   
     margin:0px 6px 0px 0px;
     
-    height:20px;
-    line-height:20px;
+    height:30px;
+    line-height:30px;
 
     background-color:brown;
     color:white;
