--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -69,11 +69,12 @@ h1{
     height:30px;
 }
 .content-2-portfolio-filter-search{
+    padding:0px;
     
     width:130px;
-    height:30px;
+    height:28px;
     
-    line-height:30px;
+    line-height:28px;
 
     border:none;
     border-radius:8px;
