--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -72,9 +72,9 @@ h1{
     padding:0px;
     
     width:130px;
-    height:28px;
+    height:30px;
     
-    line-height:28px;
+    line-height:30px;
 
     border:none;
     border-radius:8px;
@@ -82,6 +82,9 @@ h1{
     font-family:"Raleway";
     font-weight:300;
     
+}
+.content-2-portfolio-filter-search:hover{
+    width:170px;
 }
 .content-2-portfolio-filter-li-btn-search{
     margin:0px 10px 0px 0px;
