--- a/CSS/styles-portfolio.css
+++ b/CSS/styles-portfolio.css
@@ -69,7 +69,8 @@ h1{
     height:30px;
 }
 .content-2-portfolio-filter-search{
-    padding:0px;
+    padding:0px 0px 0px 5px;
+
     
     width:130px;
     height:30px;
@@ -81,6 +82,9 @@ h1{
 
     font-family:"Raleway";
     font-weight:300;
+
+    transition-timing-function:earse-in-out;
+    transition-duration:0.4s;
     
 }
 .content-2-portfolio-filter-search:hover{
