--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,7 +22,7 @@ body{
 
     text-align: center;
 
-    background-image: url(./RESOURCES/main-content-1-BG.png);
+    background-image: url(../RESOURCES/main-content-1-BG.png);
     background-size: cover;
     background-position: center;
 }
@@ -71,7 +71,7 @@ h1{
     height: 500px;
 
     border-radius: 20px;
-    background-image: url(./RESOURCES/section-2-bg.png);
+    background-image: url(../RESOURCES/section-2-bg.png);
     background-size: cover;
     
 }
