--- a/CSS/styles-task.css
+++ b/CSS/styles-task.css
@@ -38,12 +38,6 @@ h1{
 
     margin-bottom: 20px;
 }
-.content-1-img{
-    width: 30px;
-    height: 50px;
-
-    opacity: 70%;
-}
 
 /*CONTENT 2*/
 .content-2{
@@ -52,4 +46,34 @@ h1{
     border-radius: 20px;
     background-image: url(../RESOURCES/section-2-bg.png);
     background-size: cover;
+}
+.content-2-ul{
+    padding: 0px 15px 0px 15px;
+    height: 30px;
+
+    border-radius: 20px;
+
+    backdrop-filter: blur(10px);
+}
+.content-2-li{
+    display: inline-block;
+
+    margin-right: 5px;
+
+    height: 30px;
+}
+.content-2-li-btn{
+    padding: 0px 10px 0px 10px;
+
+    height: 30px;
+    line-height: 30px;
+
+    border: none;
+    border-radius: 10px;
+
+    color: white;
+    background-color: brown;
+
+    font-size: 15px;
+
 }
