--- a/CSS/styles-task.css
+++ b/CSS/styles-task.css
@@ -62,6 +62,18 @@ h1{
 
     height: 30px;
 }
+.content-2-li-status{
+    display: inline-block;
+
+    margin-bottom: 10px;
+    width: 6px;
+    height: 6px;
+
+    border-radius: 6px;
+
+    box-shadow:0px 0px 4px greenyellow;
+    background-color: rgb(10, 203, 10);
+}
 .content-2-li-btn{
     padding: 0px 10px 0px 10px;
 
@@ -71,9 +83,105 @@ h1{
     border: none;
     border-radius: 10px;
 
-    color: white;
-    background-color: brown;
+    font-size: 15px;
+    font-weight: 400;
 
+    font-family: 'Raleway';
+
+    cursor: pointer;
+}
+.content-2-li-btn:hover{
+
+    color: white;
+    background-color:brown;
+}
+.content-2-container{
+
+    margin: 0 auto;
+    margin-top:10px;
+    margin-left: 15px;
+    margin-right: 15px;
+
+    height: 500px;
+}
+.content-2-task-desk{
+    display: inline-block;
+    vertical-align: top;
+
+    padding: 10px;
+
+    width: 30%;
+    height: 500px;
+
+    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.404);
+    border-radius: 20px;
+}
+.content-2-work-desk{
+    display: inline-block;
+
+    width: 69.6%;
+    height: 500px;
+
+    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.404);
+    border-radius: 20px;
+}
+.content-2-task-desk-ul{
+    
+    width: 100%;
+}
+.content-2-task-desk-li{
+    margin: 0px 0px 10px 0px;
+    
+    width: 100%;
+    height: 70px;
+}
+.content-2-task-desk-li-btn{
+    padding: 10px;
+
+    width: 100%;
+    height: 70px;
+
+    border-radius: 20px;   
+    border: none;
+
+    text-align: left;
+    font-family: 'Raleway';
     font-size: 15px;
 
+    cursor: pointer;
+
+    background-color:rgba(255, 255, 255, 0);
+    backdrop-filter: blur(2px);
+    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.404);
+}
+.content-2-task-desk-li-btn:hover{
+
+    background-color:rgba(255, 255, 255, 0.092);
+    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.509);
+
+}
+
+
+.content-2-task-desk-li-task-name{
+    display: inline-block;
+    margin-bottom: 11px;
+
+    width: 50%;
+    height: 20px;
+}
+.content-2-task-desk-li-task-status{
+    
+    float: right;
+
+    padding: 5px 10px 5px 10px;
+
+    background-color: rgba(17, 200, 17, 0.624);
+    border-radius: 10px;
+
+    color: white;
+
+    font-family: 'Raleway';
+    font-size: 12px;
+
+    box-shadow: 0px 0px 4px grey;
 }
