--- a/CSS/styles-update.css
+++ b/CSS/styles-update.css
@@ -270,6 +270,8 @@ h1{
     margin-bottom: 10px;
     height: 35px;
     width: 100%;
+
+    cursor:pointer;
 }
 .content-2-list-li:last-child{
     margin-bottom:0px;
