--- a/CSS/styles-update.css
+++ b/CSS/styles-update.css
@@ -81,6 +81,7 @@ h1{
     border-radius: 10px;
 
     backdrop-filter:blur(2px);
+    cursor:pointer;
 }
 .content-2-bar-li-2:hover{
     color: white;
